Applied a fix for the icon badge and burger menu's line to ensure it appears in right color, even when the website is in dark mode.

--- a/style.css
+++ b/style.css
@@ -278,7 +278,7 @@ footer {
 
 /* Decorations for Mobile Version */
 
-@media only screen and (max-device-width: 800px) {
+@media only screen and (max-device-width: 800px) and (prefers-color-scheme: dark) {
     /* Styles for typical tablets and mobiles screens */
 
     .username {
